# Axiom

./: .gitignore  Cargo.toml  ISA.txt  README.md  axiom.circ
Assembler/: Cargo.toml
Emulator/: CMakeLists.txt  CMakeUserPresets.json  Cargo.toml  Makefile  conanfile.py
Emulator/assets/: axiom-emulator.info
Emulator/src/: axiom-emulator.cpp  lib.rs  main.c
